--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.support_version = '27.1.1'
+    ext.lifecycle_version = '1.1.0'
+    ext.retrofit_version = '2.4.0'
+    ext.glide_version = '4.7.1'
+    ext.dagger_version = '2.16'
+
     repositories {
         google()
         jcenter()
