--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.0.2'
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
 
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
 }
